# bugflow

./: .gitignore  README.md  bugflow.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bugflow/: __init__.py  cli.py  orchestrator.py
bugflow/core/: humanize.py
bugflow/phases/: phase1_targets.py  phase2_recon.py  phase3_scanning.py  phase4_api_testing.py  phase5_report.py
core/: humanize.py  utils.py
phases/: phase1_targets.py  phase2_recon.py  phase5_report.py
tests/: test_orchestrator.py  test_phases.py
