[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugflow"
version = "1.0.0"
description = "Multi-agent bug bounty automation engine — 5-phase pipeline for reconnaissance, scanning, API testing, and reporting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Enish Shah", email = "enish.b.shah@gmail.com"}
]
keywords = [
    "bug-bounty",
    "penetration-testing",
    "reconnaissance",
    "vulnerability-scanner",
    "security",
    "cybersecurity",
    "ethical-hacking",
    "nuclei",
    "subdomain-enumeration",
    "api-security",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]
full = [
    "nuclei>=3.0",
    "httpx>=0.27",
    "subfinder>=2.6",
]

[project.urls]
Homepage = "https://github.com/adbhutrd/bugflow"
Documentation = "https://github.com/adbhutrd/bugflow#readme"
Repository = "https://github.com/adbhutrd/bugflow"
Issues = "https://github.com/adbhutrd/bugflow/issues"

[project.scripts]
bugflow = "bugflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bugflow", "bugflow.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
